update html file

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Junayed Rahaman</title>
 	 <link href="https://fonts.googleapis.com/css?family=Mina:400,700" rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="style.css">
@@ -46,7 +47,7 @@
 		<div class="col-lg-12">
 			<div id="content">
 				<h1><strong>Junayed Rahaman</strong></h1>
-			           <h3><strong>A code lover and developer </strong></h3>
+			           <h3><strong>A wanderer and worshiper of nature</strong></h3>
 			           <h3><strong>Appreciate and enjoy</strong></h3>
 
 			            <a href="https://www.facebook.com/junaid.rahaman.7545" type="button" class="btn btn-danger btn-lg">
