update index html file

--- a/index.html
+++ b/index.html
@@ -70,6 +70,7 @@
 
 <!-- Latest compiled JavaScript -->
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+	<script type="text/javascript" src="script.js"></script>
 </body>
 </html>
 
