--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 	<div class="row">
 		<div class="col-lg-12">
 			<div id="content">
-				<h1><strong>With <i class="fas fa-heart"></i> from Junayed Rahaman</strong></h1>
+				<h1><strong>Junayed Rahaman</strong></h1>
 			            <a href="https://www.facebook.com/junaid.rahaman.7545" type="button" class="btn btn-danger btn-lg">
 			          	<i class="fa fa-facebook-official" aria-hidden="true"></i>
 			           	<strong>Follow me on facebook</strong>
