--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
 	<div class="row">
 		<div class="col-lg-12">
 			<div id="content">
-				<h3><strong>Hi! I am Junayed Rahaman</strong></h3>
-				<h4>Thanks for visiting my website<h4>
+				<h2><strong>Hi! I am Junayed Rahaman</strong></h2>
+				<h3>Thanks for visiting my website</h3>
 			            <a href="https://www.facebook.com/junaid.rahaman.7545" type="button" class="btn btn-danger btn-lg">
 			          	<i class="fa fa-facebook-official" aria-hidden="true"></i>
 			           	<strong>Follow me on facebook</strong>
