adding new div with class bg

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 	<!-- <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"> -->
 </head>
 <body>
+	 <div class="bg"></div>
 	<!-- nav start -->
 
 <nav class="navbar navbar-default">
