--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 	 <div class="bg"></div>
 	<!-- nav start -->
 
-<nav class="navbar navbar-default">
+<nav class="navbar fixed-top navbar-light bg-light">
   <div class="container">
     <!-- Brand and toggle get grouped for better mobile display -->
     <div class="navbar-header">
