--- a/index.html
+++ b/index.html
@@ -47,11 +47,11 @@
 	<div class="row">
 		<div class="col-lg-12">
 			<div id="content">
-				<h2><strong>Hi! I am Junayed Rahaman</strong></h2>
+				<h2>Hi! I am Junayed Rahaman</h2>
 				<h3>Thanks for visiting my website</h3>
 			            <a href="https://www.facebook.com/junaid.rahaman.7545" type="button" class="btn btn-danger btn-lg">
 			          	<i class="fa fa-facebook-official" aria-hidden="true"></i>
-			           	<strong>Follow me on facebook</strong>
+			           	Follow me on facebook
 			           </a>
 			</div>
 
