adding animate css

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Junayed Rahaman</title>
+	<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.0/animate.css">
 	<link href="https://fonts.googleapis.com/css?family=Lilita+One" rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="style.css">
 	<!-- <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css"> -->
@@ -47,9 +48,9 @@
 	<div class="row">
 		<div class="col-lg-12">
 			<div id="content">
-				<h2>Hi! I am Junayed Rahaman</h2>
-				<h3>Thanks for visiting my website</h3>
-			            <a href="https://www.facebook.com/junaid.rahaman.7545" type="button" class="btn btn-danger btn-lg">
+				<h2 class="animated bounceIn">Hi! I am Junayed Rahaman</h2>
+				<h3 class="animated bounceIn">Thanks for visiting my website</h3>
+			            <a href="https://www.facebook.com/junaid.rahaman.7545" type="button" class="btn btn-danger btn-lg" class="animated bounceIn">
 			          	<i class="fa fa-facebook-official" aria-hidden="true"></i>
 			           	Follow me on facebook
 			           </a>
