updating index file

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="#"><i class="fa fa-meetup fa-lg" aria-hidden="true"></i> Junayed Rahaman</a>
+      <a class="navbar-brand" href="index.html"><i class="fa fa-meetup fa-lg" aria-hidden="true"></i> Junayed Rahaman</a>
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
@@ -50,7 +50,7 @@
 			<div id="content">
 				<h2 class="animated bounceIn">Hi! I am Junayed Rahaman</h2>
 				<h3 class="animated bounceIn">Thanks for visiting my website</h3>
-			            <a href="https://www.facebook.com/junaid.rahaman.7545" type="button" class="btn btn-danger btn-lg" class="animated bounceIn">
+			            <a href="https://www.facebook.com/junaid.rahaman.7545" type="button" class="btn btn-danger btn-lg" id="btn">
 			          	<i class="fa fa-facebook-official" aria-hidden="true"></i>
 			           	Follow me on facebook
 			           </a>
