--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@
 	<div class="row">
 		<div class="col-lg-12">
 			<div id="content">
-				<h2 class="animated bounceIn">Hi! I am Junayed Rahaman</h2>
-				<h3 class="animated bounceIn">Thanks for visiting my website</h3>
+				<h2>Hi! I am Junayed Rahaman</h2>
+				<h3>Thanks for visiting my website</h3>
 			            <a href="https://www.facebook.com/junaid.rahaman.7545" type="button" class="btn btn-danger btn-lg" id="btn">
 			          	<i class="fa fa-facebook-official" aria-hidden="true"></i>
 			           	Follow me on facebook
