change browser theme color

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Junayed Rahaman</title>
+	<meta name="theme-color" content="#101010">
 	<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.0/animate.css">
 	<link href="https://fonts.googleapis.com/css?family=Lilita+One" rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="style.css">
