--- a/index.html
+++ b/index.html
@@ -3,21 +3,15 @@
 <head>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Junayed Rahaman</title>
-	<meta name="theme-color" content="#101010">
 	<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.0/animate.css">
 	<link href="https://fonts.googleapis.com/css?family=Lilita+One" rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="style.css">
-	<!-- <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css"> -->
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 	<link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-	
-	<!-- <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"> -->
 </head>
 <body>
-	 <div class="bg"></div>
 	<!-- nav start -->
-
-<nav class="navbar navbar-inverse navbar-fixed-top">
+<nav class="navbar navbar-inverse">
   <div class="container">
     <!-- Brand and toggle get grouped for better mobile display -->
     <div class="navbar-header">
@@ -33,13 +27,8 @@
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
-        <li class="active"><a href="#">Home</a></li>
-        <li><a href="#">About</a></li>
-        <li><a href="#">Contacts</a></li>
-      </ul>
-      <ul class="nav navbar-nav navbar-right">
-        <li><a href="#">Sign Up  <i class="fa fa-user-plus" aria-hidden="true"></i></a></li>
-        <li><a href="#">Login  <i class="fa fa-user" aria-hidden="true"></i></a></li>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="About.html">About</a></li>
       </ul>
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
@@ -53,10 +42,13 @@
 				<h3>Thanks for visiting my website</h3>
 			            <a href="https://www.facebook.com/junaid.rahaman.7545" type="button" class="btn btn-danger btn-lg" id="btn">
 			          	<i class="fa fa-facebook-official" aria-hidden="true"></i>
-			           	Follow me on facebook
+			           	Facebook
 			           </a>
+                     <a href="https://twitter.com/junayed_rahaman" type="button" class="btn btn-info btn-lg" id="btn">
+			          	<i class="fa fa-twitter" aria-hidden="true"></i>
+			           	Twitter
+			           </a>	            
 			</div>
-
 		</div>
 	</div>
 </div>
@@ -74,4 +66,5 @@
 	<script type="text/javascript" src="script.js"></script>
 </body>
 </html>
+
 
