Change link font size

--- a/About.html
+++ b/About.html
@@ -28,8 +28,8 @@
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
-        <li><a href="index.html">Home</a></li>
-        <li><a href="About.html">About</a></li>
+        <li style="font-size:18px;"><a href="index.html">Home</a></li>
+        <li style="font-size:18px;"><a href="About.html">About</a></li>
       </ul>
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
