--- a/About.html
+++ b/About.html
@@ -14,7 +14,7 @@
     <meta charset="UTF-8">
     <title>Junayed Rahaman</title>
     <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.0/animate.css">
-	<link href="https://fonts.googleapis.com/css?family=Lilita+One" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Lalezar&display=swap" rel="stylesheet"> 
 	<link rel="stylesheet" type="text/css" href="style.css">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
@@ -45,7 +45,7 @@
 </nav>
  <div class="container">
      <div class="row">
-         <div id="container" class="col-md-8 col-centered">
+         <div id="container" class="col-md-6 col-centered">
             <div class="text-center">
              <h1>WELCOME TO ABOUT PAGE!</h1>
              <p style="font-size: 18px;color: dimgray"><i class="fas fa-quote-left"></i> <i class="fas fa-laugh-wink"></i> This website is created just for fun , don't expect anything about it <i class="fas fa-smile-wink"></i><i class="fas fa-quote-right"></i> </p>
