--- a/index.html
+++ b/index.html
@@ -13,15 +13,14 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Junayed Rahaman</title>
 	<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.0/animate.css">
-	<link href="https://fonts.googleapis.com/css?family=Lalezar&display=swap" rel="stylesheet"> 
+	<link href="https://fonts.googleapis.com/css?family=Chewy&display=swap" rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="style.css">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 	<link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-	<meta name="theme-color" content="#000000">
 </head>
 <body>
 	<!-- nav start -->
-<nav class="navbar navbar-inverse">
+<nav class="navbar navbar-default">
   <div class="container">
     <!-- Brand and toggle get grouped for better mobile display -->
     <div class="navbar-header">
@@ -37,8 +36,8 @@
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
-        <li style="font-size:18px;"><a href="index.html">Home</a></li>
-        <li style="font-size:18px;"><a href="About.html">About</a></li>
+        <li><a id="linkz" href="index.html">Home</a></li>
+        <li><a id="linkz" href="About.html">About</a></li>
       </ul>
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
