--- a/About.html
+++ b/About.html
@@ -11,17 +11,23 @@
   gtag('config', 'UA-137345022-1');
 </script>
    	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta charset="UTF-8">
-    <title>Junayed Rahaman</title>
-    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.0/animate.css">
-	<link href="https://fonts.googleapis.com/css?family=Lalezar&display=swap" rel="stylesheet"> 
+	<title>Junayed Rahaman</title>
+	 <meta property="og:url"           content="https://junayedrahaman50.github.io/About.html" />
+  <meta property="og:type"          content="website" />
+  <meta property="og:title"         content="Junayed Rahaman" />
+  <meta property="og:description"   content="Fun Website" />
+  <meta property="og:image"         content="https://source.unsplash.com/BtbjCFUvBXs/1920x1080" />
+	<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.0/animate.css">
+	<link href="https://fonts.googleapis.com/css?family=Chewy&display=swap" rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="style.css">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
-	<meta name="theme-color" content="#000000">
+	<link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
-<nav class="navbar navbar-inverse">
+	<!-- nav start -->
+	<div id="fb-root"></div>
+<script async defer crossorigin="anonymous" src="https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v3.3&appId=544929322705168&autoLogAppEvents=1"></script>
+<nav class="navbar navbar-default">
   <div class="container">
     <!-- Brand and toggle get grouped for better mobile display -->
     <div class="navbar-header">
@@ -31,31 +37,33 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="index.html"><i class="fab fa-meetup fa-lg" aria-hidden="true"></i> Junayed Rahaman</a>
+      <a class="navbar-brand" href="index.html"><i class="fa fa-meetup fa-lg" aria-hidden="true"></i> Junayed Rahaman</a>
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
-        <li style="font-size:18px;"><a href="index.html">Home</a></li>
-        <li style="font-size:18px;"><a href="About.html">About</a></li>
+        <li><a id="linkz" href="index.html">Home</a></li>
+        <li><a id="linkz" href="About.html">About</a></li>
       </ul>
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
 </nav>
+	<!-- nav end -->
  <div class="container">
      <div class="row">
          <div id="container" class="col-md-6 col-centered">
             <div class="text-center">
              <h1>WELCOME TO ABOUT PAGE!</h1>
-             <p style="font-size: 18px;color: dimgray"><i class="fas fa-quote-left"></i> <i class="fas fa-laugh-wink"></i> This website is created just for fun , don't expect anything about it <i class="fas fa-smile-wink"></i><i class="fas fa-quote-right"></i> </p>
-             <p style="font-size: 18px;color: dimgray;text-align: right;"> - JUNAYED</p>
+             <p style="font-size: 20px;color: #333333"><i class="fa fa-quote-left"></i>  This website is created just for fun !  <i class="fa fa-smile-o"></i><i class="fa fa-quote-right"></i> </p>
+             <p style="font-size: 20px;color: #333333;text-align: right;"> - JUNAYED</p>
               <div>
-               <a href="https://www.facebook.com/sharer/sharer.php?u=https://junayedrahaman50.github.io/&quote=FUN WEBSITE" type="button" class="btn btn-danger btn-lg" id="btn">
-			          	<i class="fab fa-facebook" aria-hidden="true"></i>
+               <a href="https://www.facebook.com/sharer/sharer.php?u=https://junayedrahaman50.github.io/" type="button" class="btn btn-danger btn-lg" id="btn">
+			          	<i class="fa fa-facebook-official" aria-hidden="true"></i>
 			           	Share this on FB
 			           </a>
 			           </div>
+<!--			           <div class="fb-share-button" data-href="https://junayedrahaman50.github.io/About.html" data-layout="button_count" data-size="small"><a target="_blank" href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fjunayedrahaman50.github.io%2FAbout.html&amp;src=sdkpreparse" class="fb-xfbml-parse-ignore">Share</a></div>-->
              </div>
          </div>
      </div>
