--- a/About.html
+++ b/About.html
@@ -63,7 +63,7 @@
 			           	Share this on FB
 			           </a>
 			           </div>
-<!--			           <div class="fb-share-button" data-href="https://junayedrahaman50.github.io/About.html" data-layout="button_count" data-size="small"><a target="_blank" href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fjunayedrahaman50.github.io%2FAbout.html&amp;src=sdkpreparse" class="fb-xfbml-parse-ignore">Share</a></div>-->
+		           <div class="fb-share-button" data-href="https://junayedrahaman50.github.io/About.html" data-layout="button_count" data-size="small"><a target="_blank" href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fjunayedrahaman50.github.io%2FAbout.html&amp;src=sdkpreparse" class="fb-xfbml-parse-ignore">Share</a></div>
              </div>
          </div>
      </div>
