--- a/About.html
+++ b/About.html
@@ -11,12 +11,13 @@
   gtag('config', 'UA-137345022-1');
 </script>
    	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Junayed Rahaman</title>
+	<meta property="fb:app_id"      content="544929322705168" />
 	 <meta property="og:url"           content="https://junayedrahaman50.github.io/About.html" />
   <meta property="og:type"          content="website" />
   <meta property="og:title"         content="Junayed Rahaman" />
   <meta property="og:description"   content="Fun Website" />
   <meta property="og:image"         content="https://source.unsplash.com/BtbjCFUvBXs/1920x1080" />
+		<title>Junayed Rahaman</title>
 	<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.0/animate.css">
 	<link href="https://fonts.googleapis.com/css?family=Chewy&display=swap" rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="style.css">
