--- a/About.html
+++ b/About.html
@@ -11,12 +11,6 @@
   gtag('config', 'UA-137345022-1');
 </script>
    	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<meta property="fb:app_id"      content="544929322705168" />
-	 <meta property="og:url"           content="https://junayedrahaman50.github.io/About.html" />
-  <meta property="og:type"          content="website" />
-  <meta property="og:title"         content="Junayed Rahaman" />
-  <meta property="og:description"   content="Fun Website" />
-  <meta property="og:image"         content="https://source.unsplash.com/BtbjCFUvBXs/1920x1080" />
 		<title>Junayed Rahaman</title>
 	<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.0/animate.css">
 	<link href="https://fonts.googleapis.com/css?family=Chewy&display=swap" rel="stylesheet">
@@ -59,13 +53,11 @@
              <p style="font-size: 20px;color: #333333"><i class="fa fa-quote-left"></i>  This website is created just for fun !  <i class="fa fa-smile-o"></i><i class="fa fa-quote-right"></i> </p>
              <p style="font-size: 20px;color: #333333;text-align: right;"> - JUNAYED</p>
               <div>
-               <a href="https://www.facebook.com/sharer/sharer.php?u=https://junayedrahaman50.github.io/" type="button" class="btn btn-danger btn-lg" id="btn">
+               <a href="https://www.facebook.com/sharer/sharer.php?u=https://junayedrahaman50.github.io/About.html&quote=FUN WEBSITE&image=https://source.unsplash.com/BtbjCFUvBXs/1920x1080" type="button" class="btn btn-danger btn-lg" id="btn">
 			          	<i class="fa fa-facebook-official" aria-hidden="true"></i>
 			           	Share this on FB
 			           </a>
-			           </div>
-		           <div class="fb-share-button" data-href="https://junayedrahaman50.github.io/About.html" data-layout="button_count" data-size="small"><a target="_blank" href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fjunayedrahaman50.github.io%2FAbout.html&amp;src=sdkpreparse" class="fb-xfbml-parse-ignore">Share</a></div>
-             </div>
+		    </div>
          </div>
      </div>
  </div>
