Add meta description

--- a/index.html
+++ b/index.html
@@ -10,8 +10,11 @@
 
   gtag('config', 'UA-137345022-1');
 </script>
+<meta name="description" content="Nice little website and fun to visit">
+  <meta name="keywords" content="Junayed,Junayed Rahaman,junayed,junayedrahaman">
+  <meta name="author" content="Junayed Rahaman">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Junayed Rahaman</title>
+	<title>Junayed Rahaman - Few words of myself</title>
 	<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.0/animate.css">
 	<link href="https://fonts.googleapis.com/css?family=Chewy&display=swap" rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="style.css">
