--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
-        <li><a id="linkz" href="index.html">Home</a></li>
-        <li><a id="linkz" href="About.html">About</a></li>
+        <li><a id="linkz" href="https://junayedrahaman50.github.io/index">Home</a></li>
+        <li><a id="linkz" href="https://junayedrahaman50.github.io/About">About</a></li>
       </ul>
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
