--- a/About.html
+++ b/About.html
@@ -36,14 +36,14 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="index.html"><i class="fa fa-meetup fa-lg" aria-hidden="true"></i> Junayed Rahaman</a>
+      <a class="navbar-brand" href="https://junayedrahaman50.github.io/index"><i class="fa fa-meetup fa-lg" aria-hidden="true"></i> Junayed Rahaman</a>
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
-        <li><a id="linkz" href="index.html">Home</a></li>
-        <li><a id="linkz" href="About.html">About</a></li>
+        <li><a id="linkz" href="https://junayedrahaman50.github.io/index">Home</a></li>
+        <li><a id="linkz" href="https://junayedrahaman50.github.io/About">About</a></li>
       </ul>
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
