--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="index.html"><i class="fa fa-meetup fa-lg" aria-hidden="true"></i> Junayed Rahaman</a>
+      <a class="navbar-brand" href="https://junayedrahaman50.github.io/index"><i class="fa fa-meetup fa-lg" aria-hidden="true"></i> Junayed Rahaman</a>
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
