--- a/index.html
+++ b/index.html
@@ -8,19 +8,19 @@
 	<link rel="stylesheet" type="text/css" href="Animate.css">
 	<link href="https://fonts.googleapis.com/css?family=Chewy|Literata:500|Oswald:400,500,600|Overlock:700|Sniglet|Source+Sans+Pro:400,600&display=swap" rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="style.css">
-	<title>Monktek-amazing tech gadgets</title>
+	<title>ZIGBIG-amazing tech gadgets</title>
 	<script src="https://kit.fontawesome.com/2738c5da23.js"></script>
 </head>
 <body>
 <nav class="navbar navbar-expand-md navbar-light bg-light mb-4">
 <!--       <i class="fas fa-meteor"></i>-->
-        <a title="ZIGBIG" id="brand" class="navbar-brand" href="index.html"><img src="my%20logo%202.png" alt="" width="130px"></a>
+        <a title="ZIGBIG" class="navbar-brand" href="index.html"><img src="my logo 6.png" alt="" width="160px"></a>
     </nav>
 <!-- nav end -->
 <div class="container">
 <div class="row" style="display: flex;flex-wrap: wrap;">
    <div class="col-sm-6 col-md-4 col-lg-3 mt-4 animated bounceIn">
-   	<div id="box" class="card">
+   	<div id="box2" class="card">
    		<img class="card-img-top" src="samsung-galaxy-s10.jpg" alt="samsung-galaxy-s10">
    		<div class="card-block" style="padding: 11px;">
    			<h4><a target="_blank" href="5g-mobiles.html">5 BEST 5G MOBILES</a></h4>
