--- a/5g-mobiles.html
+++ b/5g-mobiles.html
@@ -13,7 +13,7 @@
 <body>
 <!--nav start-->
 <nav class="navbar navbar-expand-md navbar-light bg-light mb-4">
-<a title="MONKTEK" class="navbar-brand" href="index.html"><img src="my logo 2.png" alt="my logo" width="130px"></a>
+<a title="MONKTEK" class="navbar-brand" href="index.html"><img src="my logo 6.png" alt="my logo" width="160px"></a>
 </nav>
 <!-- nav end -->
 <!--container start-->
@@ -21,9 +21,9 @@
 <div class="row">
 <div class="col-md-10 col-centered animated fadeIn">
 <div id="box" class="card">
-<img style="border-radius: 0px;width:80%;" class="card-img-top col-centered" src="samsung-galaxy-s10.jpg" alt="samsung-5g">
+<img style="border-radius: 0px;" class="card-img-top col-centered" src="samsung-galaxy-s10.jpg" alt="samsung-5g">
 <div class="card-block" style="padding: 9px;">
-<h1 style="margin-top:10px;font-size:25px;color:#2d2d2d;">5 BEST 5G MOBILES WITH SPECS AND INFORMATION</h1>
+<h1 style="margin-top:10px;font-size:30px;color:#2d2d2d;">5 BEST 5G MOBILES WITH SPECS AND INFORMATION</h1>
     <p class="uppertext"><!--inscript--></p>
 </div>
 <!--carousel start-->
@@ -54,7 +54,7 @@
 <!--carousel end-->
 <!--card-block-start-->
 <div class="card-block" style="padding: 9px;">
-<h1 style="margin-top:10px;font-size:23px;color:#2d2d2d;">All New Samsung Galaxy S10</h1>
+<h1 style="margin-top:10px;font-size:25px;color:#2d2d2d;">All New Samsung Galaxy S10</h1>
 <p class="maintext"><!--inscript 2--></p>
 <div>
 <span class="oswald">Key Features:</span>
