--- a/index.html
+++ b/index.html
@@ -22,11 +22,24 @@
    <div class="col-sm-6 col-md-4 col-lg-3 mt-4 animated bounceIn">
    	<div id="box2" class="card">
    		<img class="card-img-top" src="samsung-galaxy-s10.jpg" alt="samsung-galaxy-s10">
-   		<div class="card-block" style="padding: 11px;">
+   		<div class="card-block" style="padding: 9px;">
    			<h4><a target="_blank" href="5g-mobiles.html">5 BEST 5G MOBILES</a></h4>
            <p>Best handpicked 5g mobiles with features..</p>
              		<div class="text-center">
-   			<a class="btn btn-success btn-lg" target="_blank" href="5g-mobiles.html">Read more</a>
+   			<a class="btn btn-warning btn-lg" target="_blank" href="5g-mobiles.html">Read more</a>
+   		</div>
+   		</div>
+ 
+   	</div>
+   </div>
+   <div class="col-sm-6 col-md-4 col-lg-3 mt-4 animated bounceIn">
+   	<div id="box2" class="card">
+   		<img class="card-img-top" src="https://images.unsplash.com/photo-1555774698-0b77e0d5fac6?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1500&q=80" alt="samsung-galaxy-s10">
+   		<div class="card-block" style="padding: 10px;">
+   			<h4><a target="_blank" href="5g-mobiles.html">5 BEST 5G MOBILES</a></h4>
+           <p>Best handpicked 5g mobiles with features..</p>
+             		<div class="text-center">
+   			<a class="btn btn-warning btn-lg" target="_blank" href="5g-mobiles.html">Read more</a>
    		</div>
    		</div>
  
