--- a/5g-mobiles.html
+++ b/5g-mobiles.html
@@ -19,75 +19,64 @@
 <!--container start-->
 <div class="container">
 <div class="row">
-<div class="col-md-10 col-centered animated fadeIn">
-<div id="box" class="card">
-<img style="border-radius: 0px;" class="card-img-top col-centered" src="samsung-galaxy-s10.jpg" alt="samsung-5g">
-<div class="card-block" style="padding: 9px;">
-<h1 style="margin-top:10px;font-size:30px;color:#2d2d2d;">5 BEST 5G MOBILES WITH SPECS AND INFORMATION</h1>
-    <p class="uppertext"><!--inscript--></p>
+<div class="col-md-8">
+ <!--carousel start-->
+<div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+  <ol class="carousel-indicators">
+    <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+    <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+    <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+  </ol>
+  <div class="carousel-inner">
+    <div class="carousel-item active">
+      <img class="img-fluid d-block" src="https://images.unsplash.com/photo-1560849735-f0a88439a4a3?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1502&q=80" alt="First slide">
+    </div>
+    <div class="carousel-item">
+      <img class="img-fluid d-block" src="https://images.unsplash.com/photo-1555774698-0b77e0d5fac6?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1500&q=80" alt="Second slide">
+    </div>
+    <div class="carousel-item">
+      <img class="img-fluid d-block" src="https://images.unsplash.com/photo-1555774698-0b77e0d5fac6?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1500&q=80" alt="Third slide">
+    </div>
+  </div>
+  <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="sr-only">Previous</span>
+  </a>
+  <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <span class="sr-only">Next</span>
+  </a>
 </div>
-<!--carousel start-->
-<div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
-<div class="carousel-inner col-centered">
-<div class="carousel-item active">
-<img class="img-fluid mx-auto d-block" src="https://images.unsplash.com/photo-1560849735-f0a88439a4a3?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1502&q=80"
-        alt="samsung-galaxy-s10">
+<!--carousel end-->  
 </div>
-<div class="carousel-item">
-<img class="img-fluid mx-auto d-block" src="https://images.unsplash.com/photo-1555774698-0b77e0d5fac6?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1500&q=80"
-        alt="samsung-galaxy-s10">
-</div>
-<div class="carousel-item">
-<img class="img-fluid mx-auto d-block" src="samsung-galaxy-s10.jpg"
-        alt="samsung-galaxy-s10">
-</div>
-</div>
-<a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
-<span class="carousel-control-prev-icon" aria-hidden="true"></span>
-<span class="sr-only"></span>
-</a>
-<a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
-<span class="carousel-control-next-icon" aria-hidden="true"></span>
-<span class="sr-only"></span>
-</a>
-</div>
-<!--carousel end-->
-<!--card-block-start-->
-<div class="card-block" style="padding: 9px;">
-<h1 style="margin-top:10px;font-size:25px;color:#2d2d2d;">All New Samsung Galaxy S10</h1>
-<p class="maintext"><!--inscript 2--></p>
+<div class="col-md-4">
+<h1 style="font-size:30px;color:#2d2d2d;margin-top:10px;">All New Samsung Galaxy S10 </h1>
+<p>The Samsung Galaxy S10 is the "middle child" in the Galaxy S10 trio that the company has just launched. While the Galaxy S10+ has been recognised as the best that the Galaxy S series has to offer, the smaller Galaxy S10e has also managed to gain popularity thanks to its relatively powerful hardware and reasonable price. The Galaxy S10 then is stuck in the middle, claiming to offer the best of both worlds.</p>
+<p style="font-size:20px;font-family:oswald;color:#2d2d2d;font-weight:bold">Price: <i class="fas fa-rupee-sign"></i> 70000</p>
 <div>
-<span class="oswald">Key Features:</span>
-<ul>
-<li>16.0 cm (6.3 inch) FHD+ Display | Fingerprint Sensor | 2.5D, Gorilla Glass 5</li>
-<li>6 GB RAM | 128 GB ROM | Expandable Upto 256 GB</li>
-<li>16MP + 5MP Dual Rear Camera | 25MP Front Camera</li>
-<li>Qualcomm Snapdragon 710 2.2 GHz AIE Octa Core Processor</li>
-<li>4045 mAh Battery</li>
-<li>VOOC Flash Charge 3.0</li>
-<li>Dual Nano SIM Slot and Memory Card Slot</li>
-<li>Android v9.0 (Pie) OS and 1 Year Manufacturer Warranty</li>
-</ul>
+<a class="btn btn-danger btn-lg btn-block" href="https://www.amazon.com/Samsung-Factory-Unlocked-Warranty-Ceramic/dp/B07NPJ3G2N/ref=sr_1_1_sspa?crid=3LTPYDX5PW9X0&keywords=s10&qid=1563094815&s=gateway&sprefix=s10%2Caps%2C481&sr=8-1-spons&th=1" target="_blank">Buy from amazon <i class="fab fa-amazon"></i></a>
+<a class="btn btn-success btn-lg btn-block" href="https://www.amazon.com/Samsung-Factory-Unlocked-Warranty-Ceramic/dp/B07NPJ3G2N/ref=sr_1_1_sspa?crid=3LTPYDX5PW9X0&keywords=s10&qid=1563094815&s=gateway&sprefix=s10%2Caps%2C481&sr=8-1-spons&th=1" target="_blank">+ Add to cart</a>
+</div> 
 </div>
-<h5>Price: <i class="fas fa-rupee-sign"></i> 70000</h5>
-<!--buttons-->
-<div>
-<a class="btn btn-success btn-lg" href="https://www.amazon.com/Samsung-Factory-Unlocked-Warranty-Ceramic/dp/B07NPJ3G2N/ref=sr_1_1_sspa?crid=3LTPYDX5PW9X0&keywords=s10&qid=1563094815&s=gateway&sprefix=s10%2Caps%2C481&sr=8-1-spons&th=1" target="_blank">Buy from amazon <i class="fab fa-amazon"></i></a>
-<a style="float: right;" class="btn btn-success btn-lg" href="#"><i class="fas fa-arrow-up"></i></a>
+
+<div class="col-md-12 mx-auto">
+<hr>
+<p style="margin-top: 10px;" class="maintext"><!--inscript 2--></p>
+<div style="float: right;">
+<!--<h5 style="display: inline;float: right;">Price: <i class="fas fa-rupee-sign"></i> 70000</h5>-->
 </div>
+<!--<a style="float:left;margin-bottom:5px;" class="btn btn-success btn-lg" href="#"><i class="fas fa-arrow-up"></i></a>-->
+<hr>
 <!--buttons-->
 </div>
 </div>
 </div>
-</div>
-</div>
+<div style="margin-bottom:20px;"></div>
 <!--container end-->
 <!--scripts-->
-<script type="text/javascript">  
-</script>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-<script type="text/javascript" src="app.js"></script>
 <script type="text/javascript" src="bootstrap.js"></script>
+<script type="text/javascript" src="app.js"></script>
 <!--scripts end-->
 </body>
 </html>
