--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no,user-scalable=no">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
 	<link rel="stylesheet" type="text/css" href="bootstrap.css">
 	<link rel="stylesheet" type="text/css" href="Animate.css">
@@ -12,7 +12,7 @@
 	<script src="https://kit.fontawesome.com/2738c5da23.js"></script>
 </head>
 <body>
-<nav class="navbar navbar-expand-md navbar-light bg-light mb-4">
+<nav class="navbar navbar-expand-md navbar-light bg-light mb-2">
 <!--       <i class="fas fa-meteor"></i>-->
         <a title="ZIGBIG" class="navbar-brand" href="index.html"><img src="my logo 6.png" alt="" width="160px"></a>
     </nav>
