--- a/5g-mobiles.html
+++ b/5g-mobiles.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no, user-scalable=no">
 <link rel="stylesheet" type="text/css" href="bootstrap.css">
 <link rel="stylesheet" type="text/css" href="Animate.css">
 <link href="https://fonts.googleapis.com/css?family=Chewy|Literata:500|Oswald|Source+Sans+Pro:400,600&display=swap" rel="stylesheet">
