--- a/index.html
+++ b/index.html
@@ -2,31 +2,50 @@
 <html>
 <head>
 	<meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no,user-scalable=no">
+<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
 	<link rel="stylesheet" type="text/css" href="bootstrap.css">
 	<link rel="stylesheet" type="text/css" href="Animate.css">
-	<link href="https://fonts.googleapis.com/css?family=Chewy|Literata:500|Oswald:400,500,600|Overlock:700|Sniglet|Source+Sans+Pro:400,600&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Chewy|PT+Serif|Oswald|Source+Sans+Pro:400,600&display=swap" rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="style.css">
 	<title>ZIGBIG-amazing tech gadgets</title>
 	<script src="https://kit.fontawesome.com/2738c5da23.js"></script>
 </head>
 <body>
+<!--Modal-->
+<div class="modal fade" id="exampleModalCenter" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+  <div class="modal-dialog modal-dialog-centered" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 style="font-size:26px;font-family:oswald;" class="modal-title" id="exampleModalLongTitle">Here is another offer only for you!</h5>
+      </div>
+      <div class="modal-body">
+       <img class="img-fluid" src="samsung-galaxy-s10.jpg" alt="">
+        <p style="font-family:oswald;font-size:20px;margin-top:10px;">Get great 10% discount on samsung galaxy s10 here is a coupon code for you!
+        code -- 773827</p>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-success btn-lg" data-dismiss="modal">Close</button>
+        <a class="btn btn-danger btn-lg" href="https://www.amazon.com/Samsung-Factory-Unlocked-Warranty-Ceramic/dp/B07NPJ3G2N/ref=sr_1_1_sspa?crid=3LTPYDX5PW9X0&keywords=s10&qid=1563094815&s=gateway&sprefix=s10%2Caps%2C481&sr=8-1-spons&th=1" target="_blank">Get it!</a>
+      </div>
+    </div>
+  </div>
+</div>
+<!--nav start-->
 <nav class="navbar navbar-expand-md navbar-light bg-light mb-2">
-<!--       <i class="fas fa-meteor"></i>-->
-        <a title="ZIGBIG" class="navbar-brand" href="index.html"><img src="my logo 6.png" alt="" width="160px"></a>
-    </nav>
+<a class="navbar-brand" title="ZIGBIG" href="index.html"><img src="ZIGBIG..png" alt="my logo" width="130px"></a>
+</nav>
 <!-- nav end -->
 <div class="container">
 <div class="row" style="display: flex;flex-wrap: wrap;">
    <div class="col-sm-6 col-md-4 col-lg-3 mt-4 animated bounceIn">
    	<div id="box2" class="card">
    		<img class="card-img-top" src="samsung-galaxy-s10.jpg" alt="samsung-galaxy-s10">
-   		<div class="card-block" style="padding: 9px;">
+   		<div class="card-block" style="padding: 12px;">
    			<h4><a target="_blank" href="5g-mobiles.html">5 BEST 5G MOBILES</a></h4>
            <p>Best handpicked 5g mobiles with features..</p>
              		<div class="text-center">
-   			<a class="btn btn-warning btn-lg" target="_blank" href="5g-mobiles.html">Read more</a>
+   			<a class="btn btn-warning btn-lg" target="_blank" href="5g-mobiles.html">Read more ➝</a>
    		</div>
    		</div>
  
@@ -35,11 +54,11 @@
    <div class="col-sm-6 col-md-4 col-lg-3 mt-4 animated bounceIn">
    	<div id="box2" class="card">
    		<img class="card-img-top" src="https://images.unsplash.com/photo-1555774698-0b77e0d5fac6?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1500&q=80" alt="samsung-galaxy-s10">
-   		<div class="card-block" style="padding: 10px;">
+   		<div class="card-block" style="padding: 12px;">
    			<h4><a target="_blank" href="5g-mobiles.html">5 BEST 5G MOBILES</a></h4>
            <p>Best handpicked 5g mobiles with features..</p>
              		<div class="text-center">
-   			<a class="btn btn-warning btn-lg" target="_blank" href="5g-mobiles.html">Read more</a>
+   			<a class="btn btn-warning btn-lg" target="_blank" href="5g-mobiles.html">Read more ➝</a>
    		</div>
    		</div>
  
@@ -53,5 +72,6 @@
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
 <script type="text/javascript" src="bootstrap.js"></script>
+<script type="text/javascript" src="app2.js"></script>
 </body>
 </html>
