--- a/5g-mobiles.html
+++ b/5g-mobiles.html
@@ -2,22 +2,41 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no, user-scalable=no">
+<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
 <link rel="stylesheet" type="text/css" href="bootstrap.css">
 <link rel="stylesheet" type="text/css" href="Animate.css">
-<link href="https://fonts.googleapis.com/css?family=Chewy|Literata:500|Oswald|Source+Sans+Pro:400,600&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Chewy|PT+Serif|Oswald|Source+Sans+Pro:400,600&display=swap" rel="stylesheet">
 <link rel="stylesheet" type="text/css" href="style.css">
 <title>Best 5g mobiles</title>
 <script src="https://kit.fontawesome.com/2738c5da23.js"></script>
 </head>
 <body>
+<!-- Modal -->
+<div class="modal fade" id="exampleModalCenter" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+  <div class="modal-dialog modal-dialog-centered" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 style="font-size:26px;font-family:oswald;" class="modal-title" id="exampleModalLongTitle">Here is another offer only for you!</h5>
+      </div>
+      <div class="modal-body">
+       <img class="img-fluid" src="samsung-galaxy-s10.jpg" alt="">
+        <p style="font-family:oswald;font-size:20px;margin-top:10px;">Get great 10% discount on samsung galaxy s10 here is a coupon code for you!
+        code -- 773827</p>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-success btn-lg" data-dismiss="modal">Close</button>
+        <a class="btn btn-danger btn-lg" href="https://www.amazon.com/Samsung-Factory-Unlocked-Warranty-Ceramic/dp/B07NPJ3G2N/ref=sr_1_1_sspa?crid=3LTPYDX5PW9X0&keywords=s10&qid=1563094815&s=gateway&sprefix=s10%2Caps%2C481&sr=8-1-spons&th=1" target="_blank">Get it!</a>
+      </div>
+    </div>
+  </div>
+</div>
 <!--nav start-->
 <nav class="navbar navbar-expand-md navbar-light bg-light mb-4">
-<a title="MONKTEK" class="navbar-brand" href="index.html"><img src="my logo 6.png" alt="my logo" width="160px"></a>
+<a class="navbar-brand" title="ZIGBIG" href="index.html"><img src="ZIGBIG..png" alt="my logo" width="130px"></a>
 </nav>
 <!-- nav end -->
 <!--container start-->
-<div class="container">
+<div class="container animated fadeIn">
 <div class="row">
 <div class="col-md-8">
  <!--carousel start-->
@@ -52,10 +71,10 @@
 <div class="col-md-4">
 <h1 style="font-size:30px;color:#2d2d2d;margin-top:10px;">All New Samsung Galaxy S10 </h1>
 <p>The Samsung Galaxy S10 is the "middle child" in the Galaxy S10 trio that the company has just launched. While the Galaxy S10+ has been recognised as the best that the Galaxy S series has to offer, the smaller Galaxy S10e has also managed to gain popularity thanks to its relatively powerful hardware and reasonable price. The Galaxy S10 then is stuck in the middle, claiming to offer the best of both worlds.</p>
-<p style="font-size:20px;font-family:oswald;color:#2d2d2d;font-weight:bold">Price: <i class="fas fa-rupee-sign"></i> 70000</p>
+<p style="font-size:20px;font-family:oswald;color:#2d2d2d;">Price: <i class="fas fa-rupee-sign"></i> 70000</p>
 <div>
-<a class="btn btn-danger btn-lg btn-block" href="https://www.amazon.com/Samsung-Factory-Unlocked-Warranty-Ceramic/dp/B07NPJ3G2N/ref=sr_1_1_sspa?crid=3LTPYDX5PW9X0&keywords=s10&qid=1563094815&s=gateway&sprefix=s10%2Caps%2C481&sr=8-1-spons&th=1" target="_blank">Buy from amazon <i class="fab fa-amazon"></i></a>
-<a class="btn btn-success btn-lg btn-block" href="https://www.amazon.com/Samsung-Factory-Unlocked-Warranty-Ceramic/dp/B07NPJ3G2N/ref=sr_1_1_sspa?crid=3LTPYDX5PW9X0&keywords=s10&qid=1563094815&s=gateway&sprefix=s10%2Caps%2C481&sr=8-1-spons&th=1" target="_blank">+ Add to cart</a>
+<a class="btn btn-danger btn-lg btn-block" href="https://www.amazon.com/Samsung-Factory-Unlocked-Warranty-Ceramic/dp/B07NPJ3G2N/ref=sr_1_1_sspa?crid=3LTPYDX5PW9X0&keywords=s10&qid=1563094815&s=gateway&sprefix=s10%2Caps%2C481&sr=8-1-spons&th=1" target="_blank">Buy from amazon <i class="fab fa-amazon"></i> ➝</a>
+<a class="btn btn-success btn-lg btn-block" href="https://www.amazon.com/Samsung-Factory-Unlocked-Warranty-Ceramic/dp/B07NPJ3G2N/ref=sr_1_1_sspa?crid=3LTPYDX5PW9X0&keywords=s10&qid=1563094815&s=gateway&sprefix=s10%2Caps%2C481&sr=8-1-spons&th=1" target="_blank">+ Add to cart ➝</a>
 </div> 
 </div>
 
