--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <h5 style="font-size:26px;font-family:oswald;" class="modal-title" id="exampleModalLongTitle">Here is another offer only for you!</h5>
       </div>
       <div class="modal-body">
-       <img class="img-fluid" src="samsung-galaxy-s10.jpg" alt="">
+       <img class="img-fluid" src="samsung-galaxy-s10.webp" alt="samsung-galaxy-s10">
         <p style="font-family:oswald;font-size:20px;margin-top:10px;">Get great 10% discount on samsung galaxy s10 here is a coupon code for you!
         code -- 773827</p>
       </div>
@@ -33,14 +33,14 @@
 </div>
 <!--nav start-->
 <nav class="navbar navbar-expand-md navbar-light bg-light mb-2">
-<a class="navbar-brand" title="ZIGBIG" href="index.html"><img src="ZIGBIG..png" alt="my logo" width="130px"></a>
+<a class="navbar-brand" title="ZIGBIG" href="index.html"><img src="ZIGBIG..png" alt="my logo" width="110px"></a>
 </nav>
 <!-- nav end -->
 <div class="container">
 <div class="row" style="display: flex;flex-wrap: wrap;">
    <div class="col-sm-6 col-md-4 col-lg-3 mt-4 animated bounceIn">
    	<div id="box2" class="card">
-   		<img class="card-img-top" src="samsung-galaxy-s10.jpg" alt="samsung-galaxy-s10">
+   		<img class="card-img-top" src="samsung-galaxy-s10.webp" alt="samsung-galaxy-s10">
    		<div class="card-block" style="padding: 12px;">
    			<h4><a target="_blank" href="5g-mobiles.html">5 BEST 5G MOBILES</a></h4>
            <p>Best handpicked 5g mobiles with features..</p>
@@ -53,7 +53,7 @@
    </div>
    <div class="col-sm-6 col-md-4 col-lg-3 mt-4 animated bounceIn">
    	<div id="box2" class="card">
-   		<img class="card-img-top" src="https://images.unsplash.com/photo-1555774698-0b77e0d5fac6?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1500&q=80" alt="samsung-galaxy-s10">
+   		<img class="card-img-top" src="samsung-galaxy-s10-view.webp" alt="samsung-galaxy-s10">
    		<div class="card-block" style="padding: 12px;">
    			<h4><a target="_blank" href="5g-mobiles.html">5 BEST 5G MOBILES</a></h4>
            <p>Best handpicked 5g mobiles with features..</p>
