--- a/5g-mobiles.html
+++ b/5g-mobiles.html
@@ -19,7 +19,7 @@
         <h5 style="font-size:26px;font-family:oswald;" class="modal-title" id="exampleModalLongTitle">Here is another offer only for you!</h5>
       </div>
       <div class="modal-body">
-       <img class="img-fluid" src="samsung-galaxy-s10.jpg" alt="">
+       <img class="img-fluid" src="samsung-galaxy-s10.webp" alt="samsung-galaxy-s10">
         <p style="font-family:oswald;font-size:20px;margin-top:10px;">Get great 10% discount on samsung galaxy s10 here is a coupon code for you!
         code -- 773827</p>
       </div>
@@ -32,7 +32,7 @@
 </div>
 <!--nav start-->
 <nav class="navbar navbar-expand-md navbar-light bg-light mb-4">
-<a class="navbar-brand" title="ZIGBIG" href="index.html"><img src="ZIGBIG..png" alt="my logo" width="130px"></a>
+<a class="navbar-brand" title="ZIGBIG" href="index.html"><img src="ZIGBIG..png" alt="my logo" width="110px"></a>
 </nav>
 <!-- nav end -->
 <!--container start-->
@@ -48,13 +48,13 @@
   </ol>
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <img class="img-fluid d-block" src="https://images.unsplash.com/photo-1560849735-f0a88439a4a3?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1502&q=80" alt="First slide">
+      <img class="img-fluid d-block" src="samsung-galaxy-s10-view.webp" alt="First slide">
     </div>
     <div class="carousel-item">
-      <img class="img-fluid d-block" src="https://images.unsplash.com/photo-1555774698-0b77e0d5fac6?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1500&q=80" alt="Second slide">
+      <img class="img-fluid d-block" src="samsung-galaxy-s10.webp" alt="Second slide">
     </div>
     <div class="carousel-item">
-      <img class="img-fluid d-block" src="https://images.unsplash.com/photo-1555774698-0b77e0d5fac6?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1500&q=80" alt="Third slide">
+      <img class="img-fluid d-block" src="samsung-galaxy-s10.webp" alt="Third slide">
     </div>
   </div>
   <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
