--- a/5g-mobiles.html
+++ b/5g-mobiles.html
@@ -5,7 +5,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
 <link rel="stylesheet" type="text/css" href="bootstrap.css">
 <link rel="stylesheet" type="text/css" href="Animate.css">
-<link href="https://fonts.googleapis.com/css?family=Chewy|PT+Serif|Oswald|Source+Sans+Pro:400,600&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Chewy|PT+Serif|Oswald|Raleway:600&display=swap&subset=latin-ext" rel="stylesheet">
 <link rel="stylesheet" type="text/css" href="style.css">
 <title>Best 5g mobiles</title>
 <script src="https://kit.fontawesome.com/2738c5da23.js"></script>
