--- a/5g-mobiles.html
+++ b/5g-mobiles.html
@@ -89,6 +89,33 @@
 <!--buttons-->
 </div>
 </div>
+       <h4>People also viewed ➝</h4>
+<div class="row" style="display: flex;flex-wrap: wrap;">
+   <div class="col-sm-6 col-md-4 col-lg-3 mt-4 animated bounceIn">
+   	<div id="box2" class="card">
+   		<a target="_blank" href="5g-mobiles.html"><img class="card-img-top" src="samsung-galaxy-s10.webp" alt="samsung-galaxy-s10"></a>
+   		<div class="card-block" style="padding: 12px;">
+   			<h4><a target="_blank" href="5g-mobiles.html">5 BEST 5G MOBILES</a></h4>
+           <p>Best handpicked 5g mobiles with features..</p>
+             		<div class="text-center">
+   			<a class="btn btn-warning btn-lg" target="_blank" href="5g-mobiles.html">Read more ➝</a>
+   		</div>
+   		</div>
+   	</div>
+   </div>
+   <div class="col-sm-6 col-md-4 col-lg-3 mt-4 animated bounceIn">
+   	<div id="box2" class="card">
+        <a target="_blank" href="5g-mobiles.html"><img class="card-img-top" src="samsung-galaxy-s10-view.webp" alt="samsung-galaxy-s10"></a>
+   		<div class="card-block" style="padding: 12px;">
+   			<h4><a target="_blank" href="5g-mobiles.html">5 BEST 5G MOBILES</a></h4>
+           <p>Best handpicked 5g mobiles with features..</p>
+             		<div class="text-center">
+   			<a class="btn btn-warning btn-lg" target="_blank" href="5g-mobiles.html">Read more ➝</a>
+   		</div>
+   		</div>
+   	</div>
+   </div>
+</div>	
 </div>
 <div style="margin-bottom:20px;"></div>
 <!--container end-->
