--- a/index.html
+++ b/index.html
@@ -12,10 +12,7 @@
   });
 </script>
 <!-- one signal -->
-	<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
-<meta http-equiv="X-UA-Compatible" content="ie=edge">
-<link rel="apple-touch-icon" sizes="57x57" href="favicons/apple-icon-57x57.png">
+	<link rel="apple-touch-icon" sizes="57x57" href="favicons/apple-icon-57x57.png">
 <link rel="apple-touch-icon" sizes="60x60" href="favicons/apple-icon-60x60.png">
 <link rel="apple-touch-icon" sizes="72x72" href="favicons/apple-icon-72x72.png">
 <link rel="apple-touch-icon" sizes="76x76" href="favicons/apple-icon-76x76.png">
@@ -29,9 +26,12 @@
 <link rel="icon" type="image/png" sizes="96x96" href="favicons/favicon-96x96.png">
 <link rel="icon" type="image/png" sizes="16x16" href="favicons/favicon-16x16.png">
 <link rel="manifest" href="favicons/manifest.json">
-<meta name="msapplication-TileColor" content="#5271ff">
+<meta name="msapplication-TileColor" content="#007aff">
 <meta name="msapplication-TileImage" content="favicons/ms-icon-144x144.png">
-<meta name="theme-color" content="#5271ff">
+<meta name="theme-color" content="#007aff">
+	<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
 	<link rel="stylesheet" type="text/css" href="bootstrap.css">
 	<link rel="stylesheet" type="text/css" href="Animate.css">
 <link href="https://fonts.googleapis.com/css?family=Chewy|PT+Serif|Oswald|Raleway:600&display=swap&subset=latin-ext" rel="stylesheet">
@@ -48,7 +48,7 @@
         <h5 style="font-size:26px;font-family:oswald;" class="modal-title" id="exampleModalLongTitle">Here is another offer only for you!</h5>
       </div>
       <div class="modal-body">
-       <img class="img-fluid" src="samsung-galaxy-s10.webp" alt="samsung-galaxy-s10">
+       <img class="img-fluid" src="samsung-galaxy-s10.webp" alt="">
         <p style="font-family:oswald;font-size:20px;margin-top:10px;">Get great 10% discount on samsung galaxy s10 here is a coupon code for you!
         code -- 773827</p>
       </div>
@@ -60,15 +60,33 @@
   </div>
 </div>
 <!--nav start-->
-<nav class="navbar navbar-expand-md navbar-light bg-light mb-2">
-<a class="navbar-brand" title="ZIGBIG" href="index.html"><img src="ZIGBIG..png" alt="my logo" width="110px"></a>
+<nav class="navbar navbar-expand-md navbar-light bg-light justify-content-between mb-2">
+<a class="navbar-brand" title="SMACKCART" href="index.html"><img src="SMACKCART_NEW.png" alt="SMACKCART" width="140px"></a>
+ <!-- Begin Mailchimp Signup Form -->
+<!--
+<link href="//cdn-images.mailchimp.com/embedcode/horizontal-slim-10_7.css" rel="stylesheet" type="text/css">
+<div>
+<form class="form-inline" action="https://gmail.us3.list-manage.com/subscribe/post?u=d29b024a5d0ac96da0e6b53f6&amp;id=e70b318c26" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+    <div>
+     real people should not fill this in and expect good things - do not remove this or risk form bot signups
+    <div class="clear"><input class="myBtn" type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
+    </div>
+</form>
+</div>
+-->
+<!--End mc_embed_signup-->
+<!--
+  <form style="transform: translatey(-5px);" class="form-inline">
+    <a style="color:ghostwhite !important" class="btn btn-success btn-lg" href="#">Subscribe</a>
+  </form>
+-->
 </nav>
 <!-- nav end -->
 <div class="container">
 <div class="row" style="display: flex;flex-wrap: wrap;">
    <div class="col-sm-6 col-md-4 col-lg-3 mt-4 animated bounceIn">
    	<div id="box2" class="card">
-   	<a target="_blank" href="5g-mobiles.html"><img class="card-img-top" src="samsung-galaxy-s10.webp" alt="samsung-galaxy-s10"></a>
+        <a target="_blank" href="5g-mobiles.html"><img class="card-img-top" src="samsung-galaxy-s10.webp" alt="samsung-galaxy-s10"></a>
    		<div class="card-block" style="padding: 12px;">
    			<h4><a target="_blank" href="5g-mobiles.html">5 BEST 5G MOBILES</a></h4>
            <p>Best handpicked 5g mobiles with features..</p>
@@ -81,7 +99,7 @@
    </div>
    <div class="col-sm-6 col-md-4 col-lg-3 mt-4 animated bounceIn">
    	<div id="box2" class="card">
-   	<a target="_blank" href="5g-mobiles.html"><img class="card-img-top" src="samsung-galaxy-s10-view.webp" alt="samsung-galaxy-s10"></a>
+        <a target="_blank" href="5g-mobiles.html"><img class="card-img-top" src="samsung-galaxy-s10-view.webp" alt="samsung-galaxy-s10"></a>
    		<div class="card-block" style="padding: 12px;">
    			<h4><a target="_blank" href="5g-mobiles.html">5 BEST 5G MOBILES</a></h4>
            <p>Best handpicked 5g mobiles with features..</p>
