--- a/5g-mobiles.html
+++ b/5g-mobiles.html
@@ -48,7 +48,7 @@
         <h5 style="font-size:26px;font-family:oswald;" class="modal-title" id="exampleModalLongTitle">Here is another offer only for you!</h5>
       </div>
       <div class="modal-body">
-       <img class="img-fluid" src="samsung-galaxy-s10.jpg" alt="">
+       <img class="img-fluid" src="https://images.unsplash.com/photo-1569172307976-4b77792e5d4f?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=747&q=80" alt="">
         <p style="font-family:oswald;font-size:20px;margin-top:10px;">Get great 10% discount on samsung galaxy s10 here is a coupon code for you!
         code -- 773827</p>
       </div>
