Updated sizing & slider

--- a/5g-mobiles.html
+++ b/5g-mobiles.html
@@ -67,7 +67,7 @@
 <!--container start-->
 <div class="container animated fadeIn">
 <div class="row">
-<div class="col-md-8">
+<div class="col-xl-6">
  <!--carousel start-->
   <div class="swiper-container">
     <div class="swiper-wrapper">
@@ -85,12 +85,10 @@
     <!-- Add Pagination -->
     <div class="swiper-pagination"></div>
     <!-- Add Arrows -->
-    <div class="swiper-button-next"></div>
-    <div class="swiper-button-prev"></div>
   </div>
 <!--carousel end-->  
 </div>
-<div class="col-md-4">
+<div class="col-xl-6">
 <h1 style="font-size:30px;color:#2d2d2d;margin-top:10px;">All New Samsung Galaxy S10 </h1>
 <p>The Samsung Galaxy S10 is the "middle child" in the Galaxy S10 trio that the company has just launched. While the Galaxy S10+ has been recognised as the best that the Galaxy S series has to offer, the smaller Galaxy S10e has also managed to gain popularity thanks to its relatively powerful hardware and reasonable price. The Galaxy S10 then is stuck in the middle, claiming to offer the best of both worlds.</p>
 <p style="font-size:20px;font-family:oswald;color:#2d2d2d;">Price: <i class="fas fa-rupee-sign"></i> 70000</p>
@@ -147,7 +145,6 @@
     var swiper = new Swiper('.swiper-container', {
       pagination: {
         el: '.swiper-pagination',
-        type: 'progressbar',
       },
       navigation: {
         nextEl: '.swiper-button-next',
