--- a/5g-mobiles.html
+++ b/5g-mobiles.html
@@ -33,7 +33,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
 <link rel="stylesheet" type="text/css" href="bootstrap.css">
 <link rel="stylesheet" type="text/css" href="Animate.css">
-<link href="https://fonts.googleapis.com/css?family=Chewy|PT+Serif|Oswald|Raleway:600&display=swap&subset=latin-ext" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Merriweather|PT+Serif|Oswald|Raleway:600&display=swap&subset=latin-ext" rel="stylesheet">
 <link rel="stylesheet" type="text/css" href="style.css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.5.1/css/swiper.min.css">
 <title>Best 5g mobiles</title>
