--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
 	<link rel="stylesheet" type="text/css" href="bootstrap.css">
 	<link rel="stylesheet" type="text/css" href="Animate.css">
-<link href="https://fonts.googleapis.com/css?family=Chewy|PT+Serif|Oswald|Raleway:600&display=swap&subset=latin-ext" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Merriweather|Oswald&display=swap&subset=latin-ext" rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="style.css">
 	<title>ZIGBIG-amazing tech gadgets</title>
 	<script src="https://kit.fontawesome.com/2738c5da23.js"></script>
