--- a/5g-mobiles.html
+++ b/5g-mobiles.html
@@ -100,7 +100,7 @@
 
 <div class="col-md-12 mx-auto">
 <hr>
-<p style="margin-top: 10px;" class="uppertext"><!--inscript 2--></p>
+<p style="margin-top: 10px;">Buy the all new Galaxy S10 (Prism Black) 128GB with 8GB RAM. Find the best price with exciting offers and shop from Samsung India ...</p>
 <div style="float: right;">
 <!--<h5 style="display: inline;float: right;">Price: <i class="fas fa-rupee-sign"></i> 70000</h5>-->
 </div>
