--- a/5g-mobiles.html
+++ b/5g-mobiles.html
@@ -85,6 +85,8 @@
     <!-- Add Pagination -->
     <div class="swiper-pagination"></div>
     <!-- Add Arrows -->
+    <div class="swiper-button-next"></div>
+    <div class="swiper-button-prev"></div>
   </div>
 <!--carousel end-->  
 </div>
