fixed top navbar

--- a/5g-mobiles.html
+++ b/5g-mobiles.html
@@ -60,7 +60,7 @@
   </div>
 </div>
 <!--nav start-->
-<nav class="navbar navbar-expand-md navbar-light bg-light mb-4">
+<nav class="navbar navbar-expand-md navbar-light fixed-top bg-light">
 <a class="navbar-brand" title="SMACKCART" href="index.html"><img src="SMACKCART_NEW.png" alt="SMACKCART" width="140px"></a>
 </nav>
 <!-- nav end -->
