--- a/index.html
+++ b/index.html
@@ -8,17 +8,17 @@
     <script type="text/javascript" src="assets/js/lib/jQueryMin.js"></script>
     <link rel="stylesheet" href="assets/css/todos.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
-    <link href="https://fonts.googleapis.com/css?family=Coiny" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Bebas+Neue|Hachi+Maru+Pop|Permanent+Marker&display=swap" rel="stylesheet"">
 </head>
 <body>
 <div id="container">
 <h1>To-do Lists<i class="fas fa-pencil-alt"></i></h1>
-<input type="text" maxlength="28" placeholder="Enter to-dos"> 
+<input type="text" maxlength="20" placeholder="Enter to-dos">
 <ul>
     <li><span><i class="fas fa-trash"></i></span> I am a to-do</li>
     <li><span><i class="fas fa-trash"></i></span> I am a to-do</li>
     <li><span><i class="fas fa-trash"></i></span> I am a to-do</li>
-</ul> 
+</ul>
 </div>
 <script type="text/javascript" src="assets/js/todos.js"></script>
 </body>
