--- a/liquid-layout/liquid.html
+++ b/liquid-layout/liquid.html
@@ -6,34 +6,23 @@
     <link rel="stylesheet" type="text/css" href="liquid.css">
   </head>
   <body>
-<div id="header">
- <h1>Logo</h1>
- <div id="nav">
- <ul>
- <li><a href="">Home</a></li>
- <li><a href="">Products</a></li>
- <li><a href="">Services</a></li>
- <li><a href="">About</a></li>
- <li><a href="">Contact</a></li>
- </ul>
- </div>
-</div>
-<div id="content">
- <div id="feature">
- <p>Feature</p>
- </div>
- <div class="article column1">
- <p>Column One</p>
- </div>
- <div class="article column2">
- <p>Column Two</p>
- </div>
- <div class="article column3">
- <p>Column Three</p>
- </div>
-</div>
-<div id="footer">
- <p>&copy; Copyright 2011</p>
-</div>
+    <header>
+         <h1>Responsive Layout using Flexbox</h1>
+    </header>
+
+    <div id="main">
+        <nav>nav</nav>
+        <aside>aside</aside>
+
+        <article>
+          <p>Kitty ipsum dolor sit amet, sunbathe claw bat puking, stretching feed me eat catnip fluffy fur claw sleep in the sink sleep in the sink. Hiss hairball fluffy fur lick biting, run eat the grass chase the red dot attack your ankles meow. Rip the couch catnip run meow stuck in a tree, sleep on your face stretching lick climb the curtains purr jump on the table jump on the table. Sleep in the sink feed me sniff give me fish toss the mousie, I don't like that food eat eat knock over the lamp scratched chase the red dot.</p>
+
+    <p>Attack your ankles puking chase the red dot lay down in your way, knock over the lamp sunbathe eat the grass sleep on your keyboard jump sleep in the sink shed everywhere. Jump on the table sleep on your keyboard jump on the table scratched sunbathe judging you, give me fish climb the curtains sleep on your face sleep in the sink bat sniff. Knock over the lamp jump sleep in the sink tail flick, sleep in the sink I don't like that food sleep on your face rip the couch bat sleep on your keyboard toss the mousie.</p>
+        </article>
+
+    </div>
+    <footer>
+    Footer
+    </footer>
 </body>
 </html>
