--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 <link href="https://fonts.googleapis.com/css2?family=Chewy&display=swap" rel="stylesheet">
 </head>
 <body id="home">
+  <div style="background: url('img/BG2.jpg')" class="page-holder bg-cover">
   <nav class="navbar navbar-expand-md navbar-light bg-dark fixed-top py-2">
     <div class="container">
       <a href="index.html" class="navbar-brand">
@@ -36,7 +37,7 @@
       </div>
     </div>
   </nav>
-
+</div>
   <script src="scripts/jquery.min.js"></script>
   <script src="scripts/popper.min.js"></script>
   <script src="scripts/bootstrap.min.js"></script>
