--- a/index.html
+++ b/index.html
@@ -12,11 +12,12 @@
 <link href="https://fonts.googleapis.com/css2?family=Chewy&display=swap" rel="stylesheet">
 </head>
 <body id="home">
-  <div style="background: url('img/BG2.jpg')" class="page-holder bg-cover">
-  <nav class="navbar navbar-expand-md navbar-light bg-dark fixed-top py-2">
+  <div style="background: url('img/BG 3.jpg')" class="page-holder bg-cover">
+  <nav class="navbar navbar-expand-md navbar-dark fixed-top">
     <div class="container">
       <a href="index.html" class="navbar-brand">
-        <img src="logo/junayed-logo.png" width="160px" alt="logo">
+        <!-- <img src="logo/junayed-logo.png" width="160px" alt="logo"> -->
+        <span>JUNAYED RAHAMAN</span>
       </a>
       <button class="navbar-toggler" data-toggle="collapse" data-target="#navbarNav"><span class="navbar-toggler-icon"></span></button>
       <div class="collapse navbar-collapse" id="navbarNav">
