--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable:no">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <meta name="theme-color" content="#212121">
   <meta name="author" content="Junayed Rahaman">
@@ -38,7 +38,7 @@
     </div>
   </nav>
   <!-- Page Header -->
-  <header class="masthead" style="background-image: url('img/BG.jfif')">
+  <header class="masthead" style="background-image: url('img/BG.jpg')">
     <div class="overlay"></div>
     <div class="container">
       <div class="row">
