Google search console

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <meta name="theme-color" content="#212121">
   <meta name="author" content="Junayed Rahaman">
+  <meta name="google-site-verification" content="h8A82_IVcjKB5j9juuy411fYHUHC4Z9nFBIQl9K7CHM" />
   <title>Junayed Rahaman - Web developer & Designer</title>
   <link rel="stylesheet" href="stylesheets/font-awesome.min.css">
   <link rel="stylesheet" href="stylesheets/bootstrap.min.css">
