--- a/index.html
+++ b/index.html
@@ -44,11 +44,7 @@
   </nav>
   <!-- Page Header -->
   <header class="masthead" style="
-  background: url('img/BG.jpg') no-repeat center center fixed;
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  background-size: cover;
-  -o-background-size: cover;">
+  background-image: url('img/BG.jpg');">
     <div class="overlay"></div>
     <div class="container">
       <div class="row">
