--- a/index.html
+++ b/index.html
@@ -15,6 +15,10 @@
   <link rel="stylesheet" href="stylesheets/font-awesome.min.css">
   <link rel="stylesheet" href="stylesheets/bootstrap.min.css">
   <link rel="stylesheet" href="stylesheets/style.css">
+    <link
+  rel="stylesheet"
+  href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+/>
 </head>
 <body>
   <!-- navbar -->
@@ -50,7 +54,7 @@
       <div class="row">
         <div class="col-lg-8 col-md-10 mx-auto">
           <div class="site-heading text-center">
-            <h1>Hi, I'm Junayed. I design & build websites.</h1>
+            <h1 class="animate__animated animate__fadeInDown">Hi, I'm Junayed. I design & build websites.</h1>
             <a href="#about-me" class="btn btn-outline-secondary btn-lg">
           <i class="fa fa-arrow-right" aria-hidden="true"></i> Read More</a>
           </div>
